# Market-Price-Predictor

./: .gitignore  README.md
api/: .env.default  Dockerfile  pyproject.toml
api/api/: __main__.py  app.py  config.py  utils.py  views.py
api/api/schemas/: __init__.py  available_stock_symbols.py  metrics.py  predictions.py
data-ingest/: .env.default  pyproject.toml
data-ingest/data_ingest/: feature_views.py  pipeline.py
data-ingest/data_ingest/etl/: extract.py  load.py  transform.py  validate.py
deploy/: app_docker_compose.yaml  deploy_modules.sh
model-inference/: pyproject.toml
model-inference/model_inference/: data.py  model.py  monitoring.py  predict.py
model-training/: .env.default  pyproject.toml
model-training/configs/: main.yaml
model-training/configs/data/: data.yaml
model-training/configs/model/: classic_transformer.yaml
model-training/model_training/: data.py  feature_engineering.py  model.py  train.py  utils.py
orchestration/: .env.default  Dockerfile  docker-compose.yaml
orchestration/dags/: ml_pipeline_dags.py
web_app/: .env.default  Dockerfile  pyproject.toml
web_app/web_app/: components.py  main.py
